// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/viewHeader/viewHeaderPropertiesMenu return properties menu 1`] = `
<div>
  <div
    aria-label="menuwrapper"
    class="MenuWrapper"
    role="button"
  >
    <button
      class="Button    "
      type="button"
    >
      <span>
        Properties
      </span>
    </button>
    <div
      class="Menu noselect bottom"
    >
      <div
        class="menu-contents"
      >
        <div
          class="menu-options"
        >
          <div
            class="MenuOption SwitchOption menu-option"
          >
            <div
              class="noicon"
            />
            <div
              class="menu-name"
            >
              Status
            </div>
            <div
              class="Switch"
            >
              <div
                class="octo-switch-inner"
              />
            </div>
          </div>
          <div
            class="MenuOption SwitchOption menu-option"
          >
            <div
              class="noicon"
            />
            <div
              class="menu-name"
            >
              Property 1
            </div>
            <div
              class="Switch"
            >
              <div
                class="octo-switch-inner"
              />
            </div>
          </div>
          <div
            class="MenuOption SwitchOption menu-option"
          >
            <div
              class="noicon"
            />
            <div
              class="menu-name"
            >
              Property 2
            </div>
            <div
              class="Switch"
            >
              <div
                class="octo-switch-inner"
              />
            </div>
          </div>
          <div
            class="MenuOption SwitchOption menu-option"
          >
            <div
              class="noicon"
            />
            <div
              class="menu-name"
            >
              Property 3
            </div>
            <div
              class="Switch"
            >
              <div
                class="octo-switch-inner"
              />
            </div>
          </div>
        </div>
        <div
          class="menu-spacer hideOnWidescreen"
        />
        <div
          class="menu-options hideOnWidescreen"
        >
          <div
            aria-label="Cancel"
            class="MenuOption TextOption menu-option menu-cancel"
            role="button"
          >
            <div
              class="noicon"
            />
            <div
              class="menu-name"
            >
              Cancel
            </div>
            <div
              class="noicon"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/viewHeader/viewHeaderPropertiesMenu return properties menu with gallery typeview 1`] = `
<div>
  <div
    aria-label="menuwrapper"
    class="MenuWrapper"
    role="button"
  >
    <button
      class="Button    "
      type="button"
    >
      <span>
        Properties
      </span>
    </button>
    <div
      class="Menu noselect bottom"
    >
      <div
        class="menu-contents"
      >
        <div
          class="menu-options"
        >
          <div
            class="MenuOption SwitchOption menu-option"
          >
            <div
              class="noicon"
            />
            <div
              class="menu-name"
            >
              Title
            </div>
            <div
              class="Switch"
            >
              <div
                class="octo-switch-inner"
              />
            </div>
          </div>
          <div
            class="MenuOption SwitchOption menu-option"
          >
            <div
              class="noicon"
            />
            <div
              class="menu-name"
            >
              Status
            </div>
            <div
              class="Switch"
            >
              <div
                class="octo-switch-inner"
              />
            </div>
          </div>
          <div
            class="MenuOption SwitchOption menu-option"
          >
            <div
              class="noicon"
            />
            <div
              class="menu-name"
            >
              Property 1
            </div>
            <div
              class="Switch"
            >
              <div
                class="octo-switch-inner"
              />
            </div>
          </div>
          <div
            class="MenuOption SwitchOption menu-option"
          >
            <div
              class="noicon"
            />
            <div
              class="menu-name"
            >
              Property 2
            </div>
            <div
              class="Switch"
            >
              <div
                class="octo-switch-inner"
              />
            </div>
          </div>
          <div
            class="MenuOption SwitchOption menu-option"
          >
            <div
              class="noicon"
            />
            <div
              class="menu-name"
            >
              Property 3
            </div>
            <div
              class="Switch"
            >
              <div
                class="octo-switch-inner"
              />
            </div>
          </div>
        </div>
        <div
          class="menu-spacer hideOnWidescreen"
        />
        <div
          class="menu-options hideOnWidescreen"
        >
          <div
            aria-label="Cancel"
            class="MenuOption TextOption menu-option menu-cancel"
            role="button"
          >
            <div
              class="noicon"
            />
            <div
              class="menu-name"
            >
              Cancel
            </div>
            <div
              class="noicon"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
